--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   bottom_navy_bar: ^6.0.0
   lottie: ^1.2.2
+  flutter_staggered_animations: ^1.0.0
 
 dev_dependencies:
   flutter_test:
